@@ -1,0 +1,164 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window>
+    <defaultcontrol always="true">9000</defaultcontrol>
+    <views>570</views>
+    <controls>
+        <!--background-->
+        <include>globalBackground</include>
+        <control type="group">
+            <posx>col-4-begin</posx>
+            <posy>row-5-begin</posy>
+            <!--animations-->
+            <include>modalDialogInOutVertical</include>
+            <control type="image">
+                <posx>0</posx>
+                <posy>0</posy>
+                <width>18-col</width>
+                <height>2-row</height>
+                <texture>colors/white.png</texture>
+                <colordiffuse>highlight</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+            </control>
+            <control type="image">
+                <posx>0</posx>
+                <posy>2-row</posy>
+                <width>18-col</width>
+                <height>18-row</height>
+                <texture>colors/black.png</texture>
+                <colordiffuse>overlay</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+            </control>
+            <control type="image">
+                <posx>5-col</posx>
+                <posy>2-row</posy>
+                <width>13-col</width>
+                <height>18-row</height>
+                <texture>colors/black.png</texture>
+                <colordiffuse>overlay</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+            </control>
+            <!--title-->
+            <control type="label">
+                <posx>24</posx>
+                <posy>0</posy>
+                <width>18-col-gutter</width>
+                <height>2-row</height>
+                <font>dialogTitle</font>
+                <label>$LOCALIZE[14111]</label>
+                <textcolor>textActive</textcolor>
+                <shadowcolor>-</shadowcolor>
+            </control>
+            <--view options-->
+            <control type="grouplist" id="9000">
+                <posx>0</posx>
+                <posy>2-row</posy>
+                <width>5-col</width>
+                <height>600</height>
+                <onleft>9000</onleft>
+                <onright>570</onright>
+                <onup>9000</onup>
+                <ondown>9000</ondown>
+                <control type="button" id="21">
+                    <description>Level button</description>
+                    <width>5-col</width>
+                </control>
+                <control type="radiobutton" id="22">
+                    <description>Only show current level</description>
+                    <width>5-col</width>
+                    <textureradiofocus>-</textureradiofocus>
+                    <textureradionofocus>-</textureradionofocus>
+                    <radiowidth/>
+                    <radioheight/>
+                </control>
+                <control type="button" id="20">
+                    <description>Clear button</description>
+                    <label>192</label>
+                    <width>5-col</width>
+                </control>
+            </control>
+            <!--content listing-->
+            <control type="panel" id="570">
+                <posx>5-col</posx>
+                <posy>2-row</posy>
+                <width>13-col</width>
+                <height>23-row</height>
+                <onleft>9000</onleft>
+                <onright>60</onright>
+                <ondown>50</ondown>
+                <onup>50</onup>
+                <pagecontrol>60</pagecontrol>
+                <itemlayout width="13-col" height="2-row">
+                    <control type="label">
+                        <posx>12</posx>
+                        <posy>3</posy>
+                        <width>900</width>
+                        <height>2-row</height>
+                        <aligny>top</aligny>
+                        <font>itemSubTitle</font>
+                        <textcolor>textActive</textcolor>
+                        <shadowcolor>-</shadowcolor>
+                        <label>$INFO[ListItem.label2]</label>
+                    </control>
+                    <control type="label">
+                        <posx>12</posx>
+                        <posy>32</posy>
+                        <width>13-col-gutter</width>
+                        <height>2-row</height>
+                        <aligny>top</aligny>
+                        <font>itemTitle</font>
+                        <textcolor>textActive</textcolor>
+                        <shadowcolor>-</shadowcolor>
+                        <label>[B]$INFO[ListItem.Label][/B] - $INFO[ListItem.Property(Event.Description)]</label>
+                    </control>
+                </itemlayout>
+                <focusedlayout width="13-col" height="2-row">
+                    <control type="image">
+                        <posx>0</posx>
+                        <posy>0</posy>
+                        <width>13-col</width>
+                        <height>2-row</height>
+                        <aspectratio>stretch</aspectratio>
+                        <texture border="0">colors/white.png</texture>
+                    </control>
+                    <control type="label">
+                        <posx>12</posx>
+                        <posy>3</posy>
+                        <width>13-col-gutter</width>
+                        <height>2-row</height>
+                        <aligny>top</aligny>
+                        <font>itemSubTitle</font>
+                        <textcolor>black</textcolor>
+                        <shadowcolor>-</shadowcolor>
+                        <label>$INFO[ListItem.label2]</label>
+                    </control>
+                    <control type="label">
+                        <posx>12</posx>
+                        <posy>32</posy>
+                        <width>13-col-gutter</width>
+                        <height>2-row</height>
+                        <aligny>top</aligny>
+                        <font>itemTitle</font>
+                        <textcolor>black</textcolor>
+                        <shadowcolor>-</shadowcolor>
+                        <label>[B]$INFO[ListItem.Label][/B] - $INFO[ListItem.Property(Event.Description)]</label>
+                    </control>
+                </focusedlayout>
+            </control>
+            <control type="scrollbar" id="60">
+                <posx>18-col-indent</posx>
+                <posy>2-row</posy>
+                <height>18-row</height>
+                <onleft>570</onleft>
+                <onright>2</onright>
+                <orientation>vertical</orientation>
+                <visible>Control.IsVisible(570)</visible>
+            </control>
+        </control>
+        <!--debugging-->
+        <include>DebugGrid</include>
+        <control type="label">
+            <include>DialogID</include>
+            <label>EventLog.xml</label>
+        </control>
+    </controls>
+</window>
